[CSS Masking][CSS Shapes] Large corner radii use with inset() clip-path are not properly constrained https://bugs.webkit.org/show_bug.cgi?id=140127

Reviewed by Darin Adler.

Source/WebCore:

Constrain large corner radii for inset() clip-path in the same way
that border-radii are constrained.

Test: fast/masking/clip-path-inset-large-radii.html

* rendering/style/BasicShapes.cpp:
(WebCore::BasicShapeInset::path): Add radii constraint. Also reformat
    code a little to shut the style bot up.

LayoutTests:

* fast/masking/clip-path-inset-large-radii-expected.html: Added.
* fast/masking/clip-path-inset-large-radii.html: Added.


Canonical link: https://commits.webkit.org/158132@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@178015 268f45cc-cd09-0410-ab3c-d52691b4dbfc